k8s/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: keycloak
  template:
    metadata:
      labels:
        component: keycloak
    spec:
      containers:
        - name: keycloak
          image: shred86/p1-keycloak
          ports:
            - containerPort: 8080
