k8s/keycloak-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: keycloak
  ports:
    - port: 8080
      targetPort: 8080
