k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - jamiemun.com
        - www.jamiemun.com
      secretName: jamiemun-com
  rules:
    - host: jamiemun.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: keycloak-cluster-ip-service
              servicePort: 8080
    - host: www.jamiemun.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: keycloak-cluster-ip-service
              servicePort: 8080
